--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {{ howMediationWorks() }}
+      {{ howMediationWorks(mediationPilot) }}
 
       <form method="post" novalidate>
         {{ csrfProtection(csrf) }}
