--- a/src/main/features/dashboard/views/status/defendant/part-admission/pa-states-paid-rejected-without-mediation.njk
+++ b/src/main/features/dashboard/views/status/defendant/part-admission/pa-states-paid-rejected-without-mediation.njk
@@ -1,4 +1,1 @@
-{{ t('{{ claimantName }} rejected your admission of {{ amount }}', {
-  claimantName: claim.claimData.claimant.name,
-  amount: amount | numeral
-}) }}
+{{ t('{{ claimantName }} rejected your admission of {{ amount }}', { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
