--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -1,81 +1,56 @@
 {% from "table.njk" import tableStart, tableEnd, row %}
 
-{% macro freeMediationBlock(claim, mediationDraft, contactPerson) %}
-  {{ tableStart('freeMediation', 'Free telephone mediation') }}
-  {{
-  row(
+{% macro freeMediationBlock(claim, draft, mediationDraft, contactPerson, contactNumber) %}
+  {{ tableStart('freeMediation', 'Consider free mediation') }}
+  {{ row(
     label = 'Will you try free mediation?',
     value = t(mediationDraft.willYouTryMediation.option) | capitalize,
     changeLink = MediationPaths.willYouTryMediation.evaluateUri({ externalId: claim.externalId }),
-    bold = true
-  )
-  }}
+      bold = true
+  ) }}
   {% if mediationDraft.youCanOnlyUseMediation %}
-    {{
-    row(
+    {{ row(
       label = 'Agree to mediation conditions',
       value = t(mediationDraft.youCanOnlyUseMediation.option) | capitalize,
       changeLink = MediationPaths.mediationAgreementPage.evaluateUri({ externalId: claim.externalId }),
       bold = true
-    )
-    }}
+    ) }}
   {% endif %}
   {% if mediationDraft.canWeUseCompany %}
     {% if mediationDraft.mediationPhoneNumberConfirmation %}
-      {{
-      row(
+      {{ row(
         label = 'Contact number',
         value = t(mediationDraft.canWeUseCompany.mediationPhoneNumberConfirmation) | capitalize,
         changeLink = MediationPaths.canWeUseCompanyPage.evaluateUri({ externalId: claim.externalId }),
         bottomBorder = false,
         bold = true
-      )
-      }}
-      {{
-      row(
+      ) }}
+      {{ row(
         label = 'Contact name',
         value = contactPerson | capitalize,
         bold = true
-      )
-      }}
+      ) }}
     {% else %}
-      {{
-      row(
+      {{ row(
         label = 'Contact number',
         value = t(mediationDraft.canWeUseCompany.mediationPhoneNumber) | capitalize,
         changeLink = MediationPaths.canWeUseCompanyPage.evaluateUri({ externalId: claim.externalId }),
         bottomBorder = false,
         bold = true
-      )
-      }}
-      {{
-      row(
+      ) }}
+      {{ row(
         label = 'Contact name',
         value = t(mediationDraft.canWeUseCompany.mediationContactPerson) | capitalize,
         bold = true
-      )
-      }}
+      ) }}
     {% endif %}
-  {% else %}
-    {% if mediationDraft.youCanOnlyUseMediation and mediationDraft.canWeUse.mediationPhoneNumber %}
-      {{
-      row(
-        label = 'Contact number',
-        value = mediationDraft.canWeUse.mediationPhoneNumber,
-        changeLink = MediationPaths.canWeUsePage.evaluateUri({ externalId: claim.externalId }),
-        bold = true
-      )
-      }}
-    {% elseif mediationDraft.youCanOnlyUseMediation %}
-      {{
-      row(
-        label = 'Contact number',
-        value = claim.claimData.claimant.mobilePhone,
-        changeLink = MediationPaths.canWeUsePage.evaluateUri({ externalId: claim.externalId }),
-        bold = true
-      )
-      }}
-    {% endif %}
+  {% elseif contactNumber %}
+    {{ row(
+      label = 'Contact number',
+      value = contactNumber,
+      changeLink = MediationPaths.canWeUsePage.evaluateUri({ externalId: claim.externalId }),
+      bold = true
+    ) }}
   {% endif %}
   {{ tableEnd() }}
 {% endmacro %}
