--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -59,7 +59,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
+      {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE and not alreadyPaid %}
         <p>{{ t('{{ defendantName }} has rejected the claim.', { defendantName: defendantName }) }}</p>
 
         <h2 class="heading-medium">{{ t('Their defence') }}</h2>
