Content changes after comparing to FTBB

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -53,7 +53,7 @@
     {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances %}
       {{ row(
         label = 'Briefly explain your reasons',
-        value = 'I require wheelchair access',
+        value = directionsQuestionnaireDraft.exceptionalCircumstances.reason,
         changeLink = DirectionsQuestionnairePaths.hearingExceptionalCircumstancesPage.evaluateUri({ externalId: claim.externalId }),
         bottomBorder = false,
         bold = true
