--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -3,17 +3,14 @@
 {% set claimantName = claim.claimData.claimant.name %}
 
 {% if claim.response.directionsQuestionnaire.selfWitness %}
-  <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled. We’ll contact you by post when they respond.', { claimantName: claimantName }) | safe }}</p>
+  <p>{{ t('We’ll contact you when {{ claimantName }} responds, to tell you what to do next.', { claimantName: claimantName }) | safe }}</p>
+  <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled.', { claimantName: claimantName }) | safe }}</p>
 
   {% if claim.response.freeMediation === FreeMediationOption.YES %}
-    <p>{{ t('If {{ claimantName }} rejects your response,', { claimantName: claimantName }) | safe }}</p>
-    <ul class="list list-bullet">
-      <li>{{ t('we’ll contact you with a mediation appointment, unless {{ claimantName }} chooses to opt out of mediation.', { claimantName: claimantName }) }}</li>
-      <li>{{ t('if they opt out of mediation the court will review the case. You might have to go to a hearing. We’ll contact you to tell you what to do next.') }}</li>
-    </ul>
+    <p>{{ t('If they reject your response and agree to try mediation we’ll contact you to arrange an appointment.') }}</p>
+    <p>{{ t('If they reject your response and don’t want to try mediation, the court will review the case. You might have to go to a hearing.') }}</p>
   {% else %}
     <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
-    <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
   {% endif %}
 {% elif claim.response.freeMediation === FreeMediationOption.YES %}
   <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
