--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -293,7 +293,7 @@
                 or (draft.isResponseRejectedFullyBecausePaidWhatOwed()
                     and draft.rejectAllOfClaim.howMuchHaveYouPaid.amount < claim.totalAmountTillToday)))
           or draft.isResponseRejectedFullyWithDispute()) %}
-      {{ freeMediationBlock(claim, draft, mediationDraft, contactPerson, contactNumber) }}
+      {{ freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot) }}
     {% endif %}
 
 
