Refactor 'mobile' out of the code-base

--- a/src/main/features/claim/views/check-and-send.njk
+++ b/src/main/features/claim/views/check-and-send.njk
@@ -25,7 +25,7 @@
           }
         )
     }}
-    {{ row('Contact number (optional)', draftClaim.claimant.mobilePhone.number, paths.claimantMobilePage.uri, bold = true) }}
+    {{ row('Contact number (optional)', draftClaim.claimant.phone.number, paths.claimantPhonePage.uri, bold = true) }}
     {{ tableEnd() }}
 
     {{ tableStart('theirDetails', 'Their details (defendant)') }}
