Remove check for mediation pilot

--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -17,7 +17,7 @@
       bold = true
     ) }}
   {% endif %}
-  {% if mediationPilot and not ( mediationDraft.youCanOnlyUseMediation === YesNoOption.YES and mediationDraft.willYouTryMediation === YesNoOption.YES ) %}
+  {% if not ( mediationDraft.youCanOnlyUseMediation === YesNoOption.YES and mediationDraft.willYouTryMediation === YesNoOption.YES ) %}
     {{ row(
       label = 'Agree to mediation conditions',
       value = t(mediationDraft.youCanOnlyUseMediation.option) | capitalize,
